--- a/messages/message-input.component.html
+++ b/messages/message-input.component.html
@@ -5,9 +5,10 @@
             <input  type="text" 
                     class="form-control" 
                     id="content"
-                    ngModel
+                    [ngModel]="message?.content"
                     name="content"
                     required>
+            <button class="btn btn-danger" type="button" (clik)="onClear(f)">Clear</button>
             <button class="btn btn-primary" type="submit">Save</button>
         </div>
     </form>
